--- a/css/style.css
+++ b/css/style.css
@@ -7,80 +7,292 @@
 }
 
 body {
-    background-color: #000000;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Roboto', sans-serif;
     font-size: 20px;
 }
 
 .container {
     width: 100%;
-    max-width: 960px;
+    max-width: 1100px;
     margin: 0 auto;
-    background-color: #ffffff;
-}
-
-main {
-    padding: 0 30px;
-}
-
-h1, h3, p, ul {
-    padding-bottom: 20px;
-}
-
-ul {
-    padding-left: 50px;
 }
 
 header {
-    background-image: url(../img/header-bg.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    height: 100px;
+    width: 100%;
+    position: absolute;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    height: 150px;
-    margin-bottom: 20px;
 }
 
-header h1 {
+.nav ul {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+}
+
+.nav-list li a{
+    position: relative;
+    z-index: 2;
+    text-decoration: none;
+    text-transform: uppercase;
     color: #ffffff;
-}
-
-header p {
-    color: #ffffff;
-    font-weight: bold;
-}
-
-section {
-    padding: 20px 0 0 0 ;
-    border-bottom: 3px solid #000000;
-}
-
-section:first-child {
-    padding: 0;
+    transition: 0.3s ease-in;
     border: none;
 }
 
-.section-photo {
+.nav-list li a:hover {
+    color: #d075e2;
+    border-bottom: 2px #d075e2 solid;
+}
+
+/* ==== MAIN ==== */
+
+.name-block {
+    height: 650px;
+    background-image: url(../img/my-bg.jpg);
+}
+
+.name-block::before {
+    content: '';
+    position: absolute;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 650px;
+    background-color: #000000;
+    opacity: 50%;
+}
+
+
+.its-me {
+    padding-top: 100px;
+    text-align: center;
+   
+}
+
+.name {
+    position: relative;
+    z-index: 2;
+    color: #ffffff;
+    font-size: 2em;
+    text-transform: uppercase;
+}
+
+.special {
+    position: relative;
+    z-index: 2;
+    color: #ffffff;
+    padding-top: 10px;
+}
+
+.myphoto {
+    position: relative;
+    z-index: 2;
+    margin: 50px auto;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 10px solid skyblue;
+}
+
+.myphoto img {
+    position: absolute;
+    width: 350px;
+    top: -120px;
+    left: -30px;
+}
+
+.social {
+    width: 200px;
+    margin: 0 auto;
+    position: relative;
+    z-index: 2;
+    list-style: none;
     display: flex;
-    justify-content: center;
-    
+    justify-content: space-between;
 }
 
-img {
-    box-shadow: 0 0 50px #000000;
+.social a {
+    color: #ffffff;
+    text-decoration: none;
+    transition: 0.3s linear;
 }
 
-pre {
-    background-color: darkgray;
-    margin-bottom: 20px;
+.social a:hover {
+    color: #83c3dd;
+}
+
+/* === SUMMARY ===*/
+
+.summary {
+    padding-top: 50px;
+    background-color: #cbe6ec;
+}
+
+.sum-title {
+    padding-bottom: 20px;
+    font-size: 3em;
+}
+
+.sum-text {
+    margin-left: 50%;
+    font-style: italic;
+    padding-bottom: 50px;
+}
+
+/* === SKILLS === */
+
+.skills {
+    position: relative;
+    background-image: url(../img/code.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.skills::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: black;
+    opacity: 0.5;
+}
+
+.skills-title {
+    position: relative;
+    z-index: 2;
+    padding-top: 50px;
+    text-align: center;
+    letter-spacing: 0.1em;
+    font-size: 2em;
+    color: #ffffff;
+}
+
+.skills-img {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.skills-img img {
+    position: relative;
+    z-index: 2;
+    width: 250px;
+}
+
+.html {
+    padding-top: 35px;
+    height: 230px;
+}
+
+.git {
+    padding-top: 80px;
+}
+
+/* === CODE EXAMPLE === */
+
+.codex {
+    background-color: #efd8f1;
+    padding-bottom: 50px;
+}
+
+.code-title {
+    padding-top: 50px;
+    text-align: center;
+}
+
+.code-ex {
+    margin-top: 50px;
+    padding: 50px 0;
+    border: 4px #83c3dd solid;
+    border-radius: 20%;
+    box-shadow: 0 24px 38px rgba(0,0,0,0.25), 0 20px 20px rgba(0,0,0,0.22);
+}
+
+/* === EDUCATION === */
+
+.education {
+    position: relative;
+    background: url(../img/bru.jpg);
+    background-size: cover;
+    background-position: 40%;
+    background-repeat: no-repeat;
+}
+
+.education::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background-color: black;
+    opacity: 0.5;
+}
+
+.ed-title {
+    position: relative;
+    z-index: 2;
+    padding-top: 80px;
+    color: #ffffff;
+    font-size: 2em;
+    text-align: center;
+    letter-spacing: 0.1em;
+}
+
+.ed-list {
+    position: relative;
+    z-index: 2;
+    color: #cbe6ec;
+    padding: 80px 0;
+    text-align: center;
+    font-style: italic;
+    font-size: 1.2em;
+    list-style: none;
+}
+
+.ed-list li {
+    padding-top: 20px;
+}
+
+
+/* === ENGLISH === */
+
+.ebglish {
+    height: 400px;
+    background: url(../img/eng.jpg);
+    background-position: 50% 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-shadow: inset 50px 50px 50px rgba(27, 27, 26, 0.5)
+}
+
+.eng-title {
+    font-size: 2em;
+    text-align: center;
+    padding-top: 50px;
+    letter-spacing: 0.1em;
+}
+
+.eng-text {
+    text-align: center;
+    padding-top: 50px;
+    font-size: 1.2em;
+    font-style: italic;
+    font-weight: 500;
 }
 
 footer {
+    padding: 20px 0;
+    font-size: 0.6em;
+    width: 700px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    padding: 20px 200px 0 200px;
-    font-size: 12px;
 }
